--- a/src/META-INF/maven/org/hy/common/hbase/pom.xml
+++ b/src/META-INF/maven/org/hy/common/hbase/pom.xml
@@ -40,7 +40,7 @@
 	
 	<dependency>
 	    <groupId>org.apache.hbase</groupId>
-	    <artifactId>hbase</artifactId>
+	    <artifactId>hbase-client</artifactId>
 	    <version>1.2.5</version>
 	</dependency>
 	
